--- a/home.html
+++ b/home.html
@@ -8,8 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
     <h1 id="h1"><center>Welcome to my Page</h1>
+        <div class="circle">
+            
+        </div>
+        <div class="container">
+
+            <img src="Bora pic1.png" alt="Bora Picture" height="300">
+
+
+            </div>
+
+        </div>
 
         <div>
             <h3><center>About Me</center></h3>
